--- a/scss/works.scss
+++ b/scss/works.scss
@@ -58,13 +58,13 @@
 
 
 .slide-1{
-    background: url(/img/works/01.jpg);
+    background: url(../img/works/01.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
 .slide-2{
-    background: url(/img/works/02.jpg);
+    background: url(../img/works/02.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
@@ -72,21 +72,21 @@
 
 }
 .slide-3{
-    background: url(/img/works/03.jpg);
+    background: url(../img/works/03.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 
 }
 .slide-4{
-    background: url(/img/works/04.jpg);
+    background: url(../img/works/04.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
 }
 
 .slide-5{
-    background: url(/img/works/05.jpg);
+    background: url(../img/works/05.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     background-position: center;
